--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,7 +55,31 @@ body{
   font-weight: bold;
 }
 
+.head-img{
+  height:580px;
+  opacity: 0.9;
+}
 
+.effects{
+  visibility: visible;
+}
+
+.img-effect{
+   opacity: 0.7;
+}
+
+.head-text{
+  /* visibility: hidden; */
+  position: absolute;
+  z-index: 1;
+  font-size: 50px;
+  text-align: center;
+  padding: 15% 10%;
+  margin: auto 0;
+  font-weight: 1000;
+  font-family: 'Lato', sans-serif;
+
+}
 /* features pane */
 
 .features{
@@ -129,9 +153,62 @@ body{
 
 .ft{
   background-color:  #041C32;
-  /* color: white; */ 
+  /* color: white; */
+}
+
+/* us */
+.us{
+  margin: 0 auto;
+   /* margin-top: 30px; */
+  padding: 4% 8%;
+}
+
+.us-box{
+  /* padding:2%; */
+  /* padding-top: 10px; */
+  height: 300px;
+}
+
+.section-heading{
+  font-size: 2.1rem;
+  /* font-family: 'Lato', sans-serif;  */
+}
+
+.p-text{
+  margin-bottom: 40px;
+}
+
+#aboutus{
+  margin-top: 10px;
+  padding: 2% 10%;
+  margin-bottom: 10px;
+}
+
+.about{
+  font-size: 2.5rem;
+  text-align: justify;
+  font-family: 'Lato', sans-serif;
+  font-style: italic;
+  /* font-weight: bold; */
+   font-weight: 700;
+}
+
+.blue-bg
+{
+  background-color: #f1eff8;
 }
 .small-font
 {
-  font-size: 50px;
+  font-size: smaller;
+}
+
+.text{
+  font-size: 1.2rem;
+  line-height: 1.3;
+  /* font-family: 'Lato', sans-serif; */
+  /* font-style: italic; */
+}
+
+.aboutus{
+  margin: auto 0;
 }
